--- a/Login/login.css
+++ b/Login/login.css
@@ -140,75 +140,40 @@ header {
     text-transform: capitalize;
     font-family: 'Arsenal SC', sans-serif;
 }
-/*-------------------------------------------------------------------------------Main "Movies"--------------------------------------------------------------------------------------------------*/
 
+/************************************************************************************************************************************************************************************************/
 
+.login p{
+color: white;
+}
 
-.movie-gallery{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
+.login{
+    background-color: #5c5a5a;
     padding: 20px;
-    
-}
-
-.movie-item{
-    width: 200px;
-    text-align: center;
-    transition: transform 0.2s ease;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
-
-.movie-item img{
-    width: 100%;
-    height: auto;
     border-radius: 10px;
-    
-}
-
-
-.movie-item img:hover{
-   transform: scale(1.1);
-}
-
-.movie-item p {
-    margin-top: 8px;
-    font-size: 0.9rem;
-    color: white;
-    text-decoration: none;
-}
-.movie-item a {
-    text-decoration: none;
-    
-} 
-
-.movie-item p:hover{
-    color: rgb(255, 0, 0);
-}
-
-.login button{
-    border: none;
-    border-radius: 6px;
-    background-color: #818181;
-    font-size: 1rem;
-    color: white;
-
- }
-
- .login button:hover{
-    color: #FF0000;
-    background-color: #030000;
-    cursor: pointer;}
-
-
-    footer {
-        text-align: center;
-        padding: 10px 20px;
-        background-color: #000;
-        color: #ffffff;
+    max-width: 300px;
+    margin: 50px auto;
+    text-align: center;
+     margin-top: 15%;
     }
-     
+.login a{
+    text-decoration: none;
+    color: black;
+}
+   
+.login label{
+    color: #000000;
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.btn {
+   border: none;
+   margin-left: 32%;
+    opacity: 0.6;
+}
+
+.btn :hover{
+    color: #FF0000;
+    background-color: #000000;
+}
