--- a/HP_1/StyleHP1.css
+++ b/HP_1/StyleHP1.css
@@ -174,6 +174,9 @@ header {
     font-size: 1rem;
     line-height: 1.5rem;
 }
+.informatie h3 , h4{
+    color: white;
+}
 
 .movie-box{
     display: flex;
